# TheCombine

./: .coverage  .dockerignore  .env.example  .gitignore  AI.md  CLAUDE.md  Develop Mentor.md  Dockerfile  Dockerfile_minimal  QAM.md  README.md  README_WORKFORCE.md  add_stations.py  ai.md  alembic_error.txt  alembic_output.txt  check2.py  check_assembler.py  check_deps.py  check_fragment.py  check_script.py  check_syntax.py  config.py  current-task-def.json  data_only.sql  database.py  debug_routes.py  dev_backup.dump  dev_backup_utf8.sql  docker-compose.staging.yml  docker-compose.yml  files.tst  files.txt  files_2025_12_17.txt  find-ui-references.ps1  fixit03.ps1  fixit04.ps1  fixit09.ps1  fixit10.ps1  fixit11.ps1  (+37 more)
.claude/: settings.json
Documentation/: TEMPLATE_PATTERN.md  (+4 more)
experience/: README.md  main.py  main_old.py  pyproject.toml  pytest.ini  test.cmd  verify_v1_2.py
experience/app/: __init__.py  dependencies.py  main.py
experience/app/models/: __init__.py  sessions.py
experience/app/orchestrator/: roles.py
experience/app/routers/: __init__.py  auth.py  repo_view.py
experience/app/schemas/: __init__.py  auth.py  repo_view.py
experience/app/services/: __init__.py  pipeline.py  repo_reader.py
experience/app/workforce/: __init__.py  workforce_api.py  workforce_git.py  workforce_models.py
experience/templates/: base.html  new_workspace_form.html  workspace_detail.html  workspace_main.html  workspace_row.html  workspaces.html
experience/templates/auth/: login.html  magic-link-email.txt
experience/tests/: __init__.py  test_auth.py  test_repo_view.py
(+2151 files in other folders)
