[project]
name = "workbench-ai"
version = "0.1.0"
description = "AI-powered product definition platform"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",           # Add this line
    "python-dotenv>=1.0.0",    # Add this if not present
]